--- a/HT0004/stylesheets/stylesheet.css
+++ b/HT0004/stylesheets/stylesheet.css
@@ -1,6 +1,6 @@
 @import url('reset.css');
 body {
-  background: #fff;
+  background: #000;
   height: 100%;
   overflow: hidden;
   width: 100%; }
@@ -12,4 +12,4 @@ body {
   position: absolute; }
 
 canvas {
-  background: #fff; }
+  background: white url("../images/background.png") 0 0 repeat; }
